Fix responsive layout issue with narrow screens

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -225,6 +225,7 @@
 
 .post-link {
   display: block;
+  word-break: break-word;
   @include relative-font-size(1.5);
 }
 
